Final hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Hotels</title>
 
 </head>
@@ -128,9 +129,8 @@
             </label>
 
             <label class="text-lg ml-5">
-                <input type="checkbox" name="Spa" value="Spa" class="text-xl ml-6 mt-4 h-[18px] w-[20px] space-x-4"> Spa <br><br><br><br>
+                <input type="checkbox" name="Spa" value="Spa" class="text-xl ml-6 mt-4 h-[18px] w-[20px] -mb-4  space-x-4"> Spa 
             </label>
-
 
         </form>
     </div>
