--- a/index.html
+++ b/index.html
@@ -51,17 +51,41 @@
           <!-- Carousel Container -->
           <div class="overflow-hidden">
             <div id="carousel" class="flex transition-transform duration-500">
-              <!-- Slide 1 -->
               <div class="w-full flex-shrink-0 py-6 my-auto">
-                <img src="images/novaara.jpg" alt="Novaara" class="w-full h-auto" />
+                <img src="images/bandrafort.jpg" alt="Bandra Fort" class="w-full h-auto" />
               </div>
-              <!-- Slide 2 -->
               <div class="w-full flex-shrink-0 py-6 my-auto">
-                <img src="images/borev.jpg" alt="Bo Reverie" class="w-full h-auto" />
+                <img src="images/csmt.png" alt="Chhatrapati Shivaji Maharaj Terminus" class="w-full h-auto" />
               </div>
-              <!-- Slide 3 -->
               <div class="w-full flex-shrink-0 py-6 my-auto">
-                <img src="images/prithvi.jpg" alt="Prithvi Cafe" class="w-full h-auto" />
+                <img src="images/csmvs.jpg" alt="Chhatrapati Shivaji Maharaj Vastu Sanghralaya" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/gatewayOfIndia.jpg" alt="Gateway Of India" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/hajiali.jpg" alt="Haji Ali" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/iskcon.jpg" alt="Iskcon Temple" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/kanheri.jpg" alt="Kanheri Caves" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/taj.jpg" alt="Taj" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/siddhivinayak.jpg" alt="Siddhivinayak Temple" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/sgnp.jpg" alt="Sanjay Gandhi National Park" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/planetarium.jpg" alt="Nehru Planetarium" class="w-full h-auto" />
+              </div>
+              <div class="w-full flex-shrink-0 py-6 my-auto">
+                <img src="images/marines.jpg" alt="Marine Drive" class="w-full h-auto" />
               </div>
             </div>
           </div>
@@ -102,5 +126,30 @@
       </div>
     </div>
   </footer>
+
+  <script>
+    const carousel = document.getElementById("carousel");
+    const slides = carousel.children;
+    const totalSlides = slides.length;
+
+    let currentIndex = 0;
+
+    // Function to update the carousel's position
+    function updateCarousel() {
+        const offset = -currentIndex * 100; // Shift to the next slide
+        carousel.style.transform = `translateX(${offset}%)`;
+    }
+
+    // Function to move to the next slide automatically
+    function autoSlide() {
+        currentIndex = (currentIndex + 1) % totalSlides; // Loop back to the first slide
+        updateCarousel();
+    }
+
+    // Start the automatic carousel
+    setInterval(autoSlide, 3000); // Change slide every 3 seconds
+
+</script>
+
 </body>
 </html>
