--- a/index.html
+++ b/index.html
@@ -10,16 +10,42 @@
 <body class="bg-gray-100 text-gray-800">
 
 <!-- Navbar -->
-<nav class="flex justify-between items-center bg-[#ded7be] text-[#46a5b5] fixed top-0 w-full z-50 shadow-lg">
-  <img src="images/logo+skyline.png" alt="Mumbai Safar Logo" id="logo" class="h-20 p-0 m-0" />
-  <div class="flex space-x-4 mr-8">
-    <a href="index.html" class="text-[#328c9c] text-lg font-bold px-3 py-2 rounded transition hover:bg-[#d8cfb0]">Home</a>
-    <a href="visit.html" class="text-[#328c9c] text-lg font-bold px-3 py-2 rounded transition hover:bg-[#d8cfb0]">Visit</a>
-    <a href="foods.html" class="text-[#328c9c] text-lg font-bold px-3 py-2 rounded transition hover:bg-[#d8cfb0]">Food</a>
-    <a href="bookings.html" class="text-[#328c9c] text-lg font-bold px-3 py-2 rounded transition hover:bg-[#d8cfb0]">Bookings</a>
-    <a href="events" class="text-[#328c9c] text-lg font-bold px-3 py-2 rounded transition hover:bg-[#d8cfb0]">Events</a>
-  </div>
-</nav>
+<nav class="flex justify-between items-center bg-[#fffee2] text-[#38808d] fixed top-0 w-full z-50 shadow-lg">
+        <img src="images/logo_skyline_brightened.jpg" alt="Mumbai Safar Logo" id="logo"
+            class="h-16 sm:h-20 p-0 m-0" />
+        <div class="flex space-x-2 sm:space-x-4 mr-4 sm:mr-8">
+            <a href="index.html"
+                class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Home</a>
+            <a href="visit"
+                class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Visit</a>
+            <a href="foods.html"
+                class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Food</a>
+            <div class="relative inline-flex text-left group">
+                <a href="#"
+                    class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Bookings</a>
+                <div
+                    class="absolute left-18 mt-[40px] w-32 sm:w-40 rounded-lg shadow-lg bg-white opacity group-hover:opacity-100 invisible group-hover:visible transition-opacity duration-500">
+                    <ul
+                        class="bg-[#fff9e4] border-none rounded-lg">
+                        <li><a href="hotels"
+                                class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Hotels</a>
+                        </li>
+                        <li><a href="train"
+                                class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Trains</a>
+                        </li>
+                        <li><a href="bus"
+                                class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Bus</a>
+                        </li>
+                        <li><a href="cab"
+                                class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Cabs</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <a href="events"
+                class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Events</a>
+        </div>
+    </nav>
 
 <div id="weatherBlock" class="fixed bottom-5 right-4 bg-[#d8cfb0] opacity-70 rounded-lg p-4 w-64 z-50">
   <h3 class="text-xl font-bold text-[#328c9c] mb-2">Mumbai Weather</h3>
