--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     class="absolute left-18 mt-[40px] w-32 sm:w-40 rounded-lg shadow-lg bg-white opacity group-hover:opacity-100 invisible group-hover:visible transition-opacity duration-500">
                     <ul
                         class="bg-[#fff9e4] border-none rounded-lg">
-                        <li><a href="hotels"
+                        <li><a href="HotelsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Hotels</a>
                         </li>
-                        <li><a href="train"
+                        <li><a href="TrainsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Trains</a>
                         </li>
-                        <li><a href="bus"
+                        <li><a href=""BusServlet
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Bus</a>
                         </li>
-                        <li><a href="cab"
+                        <li><a href="CabsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Cabs</a>
                         </li>
                     </ul>
