--- a/trains.html
+++ b/trains.html
@@ -10,11 +10,11 @@
 </head>
 
 <body class="overflow-y-scroll overflow-x-hidden ">
-    <div class="fixed top-0 left-0 w-full h-full overflow-hidden">
+<!--    <div class="fixed top-0 left-0 w-full h-full overflow-hidden">
         <img src="images/background.avif" alt="Background-image" class="w-full h-full object-cover absolute top-0 left-0 filter blur-sm"> 
-    </div>
+    </div>-->
         
-       <nav class="flex justify-between items-center bg-[#fffee2] text-[#38808d] fixed top-0 w-full z-50 shadow-lg">
+<!--       <nav class="flex justify-between items-center bg-[#fffee2] text-[#38808d] fixed top-0 w-full z-50 shadow-lg">
         <img src="images/logo_skyline_brightened.jpg" alt="Mumbai Safar Logo" id="logo"
             class="h-16 sm:h-20 p-0 m-0" />
         <div class="flex space-x-2 sm:space-x-4 mr-4 sm:mr-8">
@@ -31,16 +31,16 @@
                     class="absolute left-18 mt-[40px] w-32 sm:w-40 rounded-lg shadow-lg bg-white opacity group-hover:opacity-100 invisible group-hover:visible transition-opacity duration-500">
                     <ul
                         class="bg-[#fff9e4] border-none rounded-lg">
-                        <li><a href="hotels.html"
+                        <li><a href="HotelsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Hotels</a>
                         </li>
-                        <li><a href="#"
+                        <li><a href="TrainsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Trains</a>
                         </li>
-                        <li><a href="bus.html"
+                        <li><a href="BusServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Bus</a>
                         </li>
-                        <li><a href="cab.html"
+                        <li><a href="CabsServlet"
                                 class="block px-2 sm:px-4 py-2 text-xs sm:text-sm font-bold text-[#328c9c] hover:bg-[#f3ebc7] hover:text-[#e25a5a]">Cabs</a>
                         </li>
                     </ul>
@@ -49,7 +49,7 @@
             <a href="events.html"
                 class="text-[#328c9c] text-sm sm:text-lg font-bold px-2 sm:px-3 py-1 sm:py-2 rounded transition hover:bg-[#f6ecc9]">Events</a>
         </div>
-    </nav>
+    </nav>-->
   
  <!--Add a meta redirect to the servlet  -->
  <main class="pt-24 px-6">
